# Proj

./: collect_data.py  fils.Procfile  pyproject.toml  requirements.txt
Data/: collect_data.py  fils.Procfile  package-lock.json  requirements.txt
Data/js/: main.js
Data/public/: index.html  style.css
DataBase/: 127.0.0.1.json
js/: main.js
public/: index.html  style.css
